[tool.poetry]
name = "creepmeter_data"
version = "0.0.1"
description = "Tools to work with creepmeter data from various formats."
authors = ["Kathryn Materna <kathryn.materna@colorado.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmaterna/creepmeter_data"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.20"
matplotlib = ">=3.4"
pandas = "*"
tectonic-utils = ">0.2.0"


[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
